code/extensions/asmeta.atgt/asmeta.atgt.atgt4asmeta/src/main/java/tgtlib/definitions/expression/parser/ExpressionParser.java
/* ExpressionParser.java */
/* Generated By:JavaCC: Do not edit this line. ExpressionParser.java */
package tgtlib.definitions.expression.parser;
import java.io.StringReader;
import tgtlib.definitions.expression.type.EnumConstCreator;
import tgtlib.definitions.expression.type.Type;
import tgtlib.definitions.expression.type.BoolType;
import tgtlib.definitions.expression.*;

public class ExpressionParser implements ExpressionParserConstants {
  // in order to build the ids  private static EnumConstCreator ecc;

  // type of all the variables (if possible) otherwise null  // TODO substutute with a map from string to types   private Type varsType = null;

  /**	 * Method parse. assumes all the ids are new in the expression. All will be interpreted as boolean, except numbers	 * @param tcS String	 * @return Expression	 * @throws ParseException	 */
  public static Expression parseAsNewBooleanExpression(String tcS) throws ParseException
  {
    return parseAsBooleanExpression(tcS, new EnumConstCreator());
  }

  /**	 * Method parse. all will be interpreted as boolean, except numbers	 * @param tcS String	 * @return Expression	 * @throws ParseException	 */
  public static Expression parseAsBooleanExpression(String tcS, EnumConstCreator idcreator) throws ParseException
  {
    ecc = idcreator;
    StringReader sr = new StringReader(tcS);
    ExpressionParser ep = new ExpressionParser(sr);
    ep.varsType = BoolType.BOOLTYPE;
    Expression e = ep.parseExpression();
    return e;
  }

  /**	 * Method parse.	 * @param tcS String	 * @param e EnumConstCreator	 * @return Expression	 * @throws ParseException	 */
  public static Expression parse(String tcS, EnumConstCreator idcreator) throws ParseException
  {
    ecc = idcreator;
    StringReader sr = new StringReader(tcS);
    Expression e = new ExpressionParser(sr).parseExpression();
    return e;
  }

// precedence order (inverse order):// IMPLIES  ---  OR|XOR --- AND // 
  final public Expression parseExpression() throws ParseException {Expression e1;
  Expression e2;
    // TODO fix the associativity of the implication (should be right associative)
      e1 = orLogicExpr();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPLIES:
      case IFF:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPLIES:{
        jj_consume_token(IMPLIES);
        e2 = orLogicExpr();
e1 = new ImpliesExpression(e1, e2);
        break;
        }
      case IFF:{
        jj_consume_token(IFF);
        e2 = orLogicExpr();
e1 = new EqualsExpression(e1, e2);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

// OR and XOR  final public Expression orLogicExpr() throws ParseException {Expression e1;
  Expression e2;
    e1 = andLogicExpr();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case XOR:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        jj_consume_token(OR);
        e2 = andLogicExpr();
e1 = new OrExpression(e1, e2);
        break;
        }
      case XOR:{
        jj_consume_token(XOR);
        e2 = andLogicExpr();
e1 = new XOrExpression(e1, e2);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

// AND
  final public Expression andLogicExpr() throws ParseException {Expression e1;
  Expression e2;
    e1 = notExpr();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(AND);
      e2 = notExpr();
e1 = new AndExpression(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

//NOT
  final public Expression notExpr() throws ParseException {Expression e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      e = logicElement();
{if ("" != null) return UnaryExpression.mkUnExpr(Operator.NOT, e);}
      break;
      }
    case MINUS:
    case NUMBER:
    case ID:
    case 23:{
      e = logicElement();
{if ("" != null) return e;}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// in SAL it could be a mathExpression
// cfr := != > >= < <=
  final public Expression logicElement() throws ParseException {Expression e;
  Expression e2;
    e = mathExpression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:
    case LT:
    case LE:
    case GT:
    case GE:
    case NEQ:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:{
        jj_consume_token(EQ);
        e2 = mathExpression();
e = new EqualsExpression(e, e2);
        break;
        }
      case NEQ:{
        jj_consume_token(NEQ);
        e2 = mathExpression();
e = new NotEqualsExpression(e, e2);
        break;
        }
      case LT:{
        jj_consume_token(LT);
        e2 = mathExpression();
e = new LessThanExpression(e, e2);
        break;
        }
      case LE:{
        jj_consume_token(LE);
        e2 = mathExpression();
e = new LessEqualExpression(e, e2);
        break;
        }
      case GT:{
        jj_consume_token(GT);
        e2 = mathExpression();
e = new GreaterThanExpression(e, e2);
        break;
        }
      case GE:{
        jj_consume_token(GE);
        e2 = mathExpression();
e = new GreaterEqualExpression(e, e2);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  final public Expression mathExpression() throws ParseException {Expression m1;
  Expression m2;
    m1 = mathTerm();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        m2 = mathTerm();
m1 = new PlusExpression(m1, m2);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        m2 = mathTerm();
m1 = new MinusExpression(m1, m2);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return m1;}
    throw new Error("Missing return statement in function");
}

  final public Expression mathTerm() throws ParseException {Expression m1;
  Expression m2;
    m1 = unary();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:{
        jj_consume_token(MULT);
        m2 = unary();
m1 = new MultExpression(m1, m2);
        break;
        }
      case DIV:{
        jj_consume_token(DIV);
        m2 = unary();
m1 = new DivExpression(m1, m2);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return m1;}
    throw new Error("Missing return statement in function");
}

  final public Expression unary() throws ParseException {Expression m;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MINUS:{
      jj_consume_token(MINUS);
      m = mathElement();
{if ("" != null) return new NegExpression(m);}
      break;
      }
    case NUMBER:
    case ID:
    case 23:{
      m = mathElement();
{if ("" != null) return m;}
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Expression mathElement() throws ParseException {Token t;
  Expression m;
  String id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:{
      t = jj_consume_token(NUMBER);
{if ("" != null) return new NumericLiteral(IdExpressionCreator.parse(t.image));}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
{if ("" != null) return ecc.createIdExpression(t.image, varsType);}
      break;
      }
    case 23:{
      jj_consume_token(23);
      m = parseExpression();
      jj_consume_token(24);
{if ("" != null) return m;}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public ExpressionParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[14];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0xc000,0xc000,0x3000,0x3000,0x800,0xe50000,0x7e0,0x7e0,0x60000,0x60000,0x180000,0x180000,0xe40000,0xe00000,};
	}

  /** Constructor with InputStream. */
  public ExpressionParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ExpressionParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ExpressionParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ExpressionParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ExpressionParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ExpressionParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ExpressionParser(ExpressionParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ExpressionParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[25];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 14; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 25; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
